--- a/src/styles.css
+++ b/src/styles.css
@@ -195,15 +195,15 @@ h6{font-size: 1rem;}
 }
 #submit{
     color: rgb(0, 0, 0);
-    background-color: rgb(111, 247, 247);
+    background-color: rgb(156, 228, 224);
     border: 2px solid rgb(255, 255, 255);
     border-radius: 5px;
     padding: 10px;
     cursor: pointer; 
 }
 #submit:hover{
-    color: rgb(255, 255, 255);
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(14, 106, 192);
+    color: white;
     border: 2px solid rgb(255, 255, 255);
 }
 #position{
