--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,46 @@ html{
     color: rgb(65, 102, 9);
     font-weight: 500;
 }
+@media screen and (max-width: 570px){
+    .about{
+        border: 1px solid black;
+        display: flex;
+        flex-direction: column;
+        object-fit:cover;
+    }  
+    .imageoverlap span{
+        display: flex;
+        flex-direction: row-reverse;
+    }
+    .imageoverlap span a{
+        font-size: 14px;
+    }
+    .mediumBox .biggerbox2{
+        margin-top: 10px;
+
+    }
+    .about .mediumBox{
+        width: 90%;
+        margin: 0 auto;
+    }
+    .about .bigbox{
+        width: 100%;
+        text-align: center;
+    }
+    #header{
+        font-size: 20px;
+        margin-right: 5px;
+    }
+    #header #symbol{
+        height: 30px;
+    }
+    body .box1 {
+        font-size: 10px;
+        height: 14px;
+        width: 40px;
+        padding: 0px;
+    }
+}
 
 .box1{
     background-color: rgb(156, 228, 224);
@@ -36,9 +76,9 @@ html{
     color: black;
     text-decoration: none
 }
-.button1{
+/* .button1{
     margin-right: 20px;
-}
+} */
 .button:hover{
     background-color: black;
     color: white;
